--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,13 +8,15 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # WebSocket proxy (if needed)
+    # WebSocket proxy
     location /ws/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend_api:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 86400s;
     }
 }
