--- a/processing/Dockerfile
+++ b/processing/Dockerfile
@@ -3,11 +3,17 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Install dependencies
-COPY requirements.txt .
+COPY processing/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy code
-COPY . .
+# Create Prometheus multiprocess directory
+RUN mkdir -p /tmp/prometheus_multiproc && chmod 777 /tmp/prometheus_multiproc
+
+# Copy contracts (shared module)
+COPY contracts/ /app/contracts/
+
+# Copy processing code
+COPY processing/ .
 
 # Run Bytewax
 CMD ["python", "run.py"]
