--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "globe.gl": "^2.32.0",
-    "three": "^0.160.0"
+    "globe.gl": "2.45.0",
+    "three": "0.182.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/three": "^0.160.0",
+    "@types/three": "0.182.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
